fixing margins and alignments of logo

--- a/styles.css
+++ b/styles.css
@@ -15,11 +15,13 @@ img {
   max-width: 45px;
   vertical-align: center;
   padding-right: 0.5%;
+  padding-top: 0.26%;
 }
 
 .logo_text {
   font-size: 17px;
   padding-right: 5%;
+  margin-bottom: auto;
 }
 
 .fa {
